--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "watch": "webpack serve --watch"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^10.2.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
@@ -42,6 +42,8 @@
   "dependencies": {
     "elm": "^0.19.1-3",
     "elm-webpack-loader": "^7.0.1",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.2.0"
   }
