--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
+    "elm": "^0.19.1-3",
+    "elm-format": "^0.8.4",
     "elm-hot-webpack-loader": "^1.1.7",
+    "elm-test": "^0.19.1-revision4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^4.5.0",
@@ -40,7 +43,6 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "elm": "^0.19.1-3",
     "elm-webpack-loader": "^7.0.1",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
