--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "file-loader": "^6.2.0",
     "google-closure-compiler": "^20201102.0.1",
     "html-webpack-plugin": "^5.0.0-beta.5",
+    "html-webpack-template": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.4",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.4",
@@ -48,6 +49,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1",
+    "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.2",
     "url-loader": "^4.1.1",
