--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,10 @@
   "main": "index.js",
   "scripts": {
     "analyse": "elm-analyse -s -p 3001 -o",
-    "build": "NODE_ENV=production webpack",
+    "build": "webpack --config config/webpack.dev.js",
     "dev": "webpack serve --watch --port 3000 --config config/webpack.dev.js",
     "nodebug": "webpack serve --watch --port 3000 --config config/webpack.dev.js --env nodebug",
-    "prod": "NODE_ENV=production webpack --config config/webpack.prod.js",
-    "start": "npm run dev",
+    "prod": "webpack --config config/webpack.prod.js",
     "test": "elm-test"
   },
   "repository": {
