Added prod step to ci

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,3 +35,8 @@ jobs:
       run: |
         cd client
         npm run test
+    
+    - name: Prod
+      run: |
+        cd client
+        npm run prod
