--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "analyse": "elm-analyse -s -p 3001 -o",
     "build": "webpack --config config/webpack.dev.js",
-    "dev": "webpack serve --watch --port 3000 --config config/webpack.dev.js",
-    "nodebug": "webpack serve --watch --port 3000 --config config/webpack.dev.js --env nodebug",
+    "dev": "webpack serve --port 3000 --config config/webpack.dev.js",
+    "nodebug": "webpack serve --port 3000 --config config/webpack.dev.js --env nodebug",
     "prod": "webpack --config config/webpack.prod.js",
     "test": "elm-test"
   },
